src/index.css
:root {
  font-family: 'Roboto', sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color: rgba(255, 255, 255, 0.87);
  background-color: black;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

::selection {
  background-color: rgb(71, 18, 18);
}

body {
  margin: 0;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}


.package-version{
  cursor: pointer;
  opacity: 0.25;
  font-family: inherit;
  position:fixed;
  z-index: 9999;
  bottom:5px;
  right:5px;
  padding-right: 10px;
  background-color: black;
  border-radius: 10px;
  font-size: 14px;
}

.package-version > b{
  background-color: white;
  border-radius: 10px;
  color:rgb(139, 139, 139);
  font-weight: 200;
  padding:2.5px 5px;
}

